- Code completely rewritten to be better compatible with mods, co-op, and overall way better optimized

Birthcake Changes:
- Magdalene granting soul hearts with Yum Heart use now scales with your trinket modifier instead of just Mom's Box, up to one and a half soul hearts
- Tainted Magdalene has hearts explode with a base damage value of 5.25 (2x T. Maggy's base damage, instead of half the player's damage) that increases based on the combined number of and total trinket multipliers of all Tainted Magdelenes with
- Removed Tainted Cain's effect of a 5% chance for giving you a pickup you bagged
- Removed devil deal interaction with Judas/Dark Judas. Instead, if they would die, they will gain a black heart, damage all enemies in the room, and have Birthcake removed from their inventory. Any trinket multipliers will add an additional black heart
- Judas'/Dark Judas' damage up has been changed from +20% to +2 flat damage and +10%
- Removed Tainted Eve spawning clots twice as fast
- Lazarus will receive a soul heart upon reviving as Lazarus Risen instead of an extra heart container on a new floor
- Lost now gets two free charges that's shared between all actives (with a normal method of charging), additional charges granted scaling with trinket multipliers. Eternal D6, if used with these special charges, will reroll with the same effect as Lost's birthright
- Removed Lilith's secondary effect of consuming the trinket on a new floor and gaining a familiar
- Chance of Lilith's familiars obtaining their tear effects increases with your trinket multiplier, +25% for each additional mulitplier
- Keeper spawns more nickels depending on your multiplier instead of spawning a Golden Penny when entering shops or devil rooms
- J&E now only takes 10% of the other brother's stats instead of 25%

Birthcake Reworks:
- Isaac spawns a Dice Shard when entering a Treasure Room and when clearing a Boss Room. Spawned amount scales with trinket multipliers